Modification des noms d'auteurs

--- a/TutoGit.tex
+++ b/TutoGit.tex
@@ -5,7 +5,7 @@
 \usepackage[pdftex]{graphicx}
   
 \title{Titre du document}
-\author{Auteur}
+\author{Auteur1 Auteur2}
   
 \begin{document}
   
@@ -18,7 +18,7 @@
   
 \begin{figure}
   \centering
-  \includegraphics[width=0.48\linewidth]{AccueilGithubPourTutoGit}
+  \includegraphics[width=0.7\linewidth]{AccueilGithubPourTutoGit}
   \caption{Ecran Accueil Github}
 \end{figure}
   
